chore: move CsvMetarProvider to Infrastructure and remove GzipCompressor

--- a/BadWeather/BadWeather.csproj
+++ b/BadWeather/BadWeather.csproj
@@ -16,7 +16,7 @@
 
     <ItemGroup>
       <Folder Include="Api" />
-      <Folder Include="Infrastructure" />
+      <Folder Include="Application\Services" />
     </ItemGroup>
 
 </Project>
