tests: added integration tests

--- a/BadWeather/BadWeather.csproj
+++ b/BadWeather/BadWeather.csproj
@@ -19,4 +19,8 @@
       <Folder Include="Application\Services" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="BadWeather.Tests" />
+    </ItemGroup>
+
 </Project>
