--- a/BadWeather/BadWeather.csproj
+++ b/BadWeather/BadWeather.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <Folder Include="Api" />
+      <Folder Include="Application\Mappings" />
       <Folder Include="Application\Services" />
     </ItemGroup>
 
