feat: add EFCore

--- a/BadWeather/appsettings.Development.json
+++ b/BadWeather/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Host=localhost;Port=54322;Database=badweather;Username=postgres;Password=secret;"
   }
 }
