--- a/BadWeather/appsettings.Development.json
+++ b/BadWeather/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Host=localhost;Port=54322;Database=badweather;Username=postgres;Password=secret;"
+    "ApplicationDbContext": "Host=localhost;Port=54322;Database=badweather;Username=postgres;Password=secret;Timeout=30;Command Timeout=0;KeepAlive=60"
   }
 }
