--- a/BadWeather/BadWeather.csproj
+++ b/BadWeather/BadWeather.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <Folder Include="Api" />
+      <Folder Include="Application\Filters" />
       <Folder Include="Application\Mappings" />
     </ItemGroup>
 
