chore: added redis cache

--- a/BadWeather/appsettings.Development.json
+++ b/BadWeather/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Host=localhost;Port=54322;Database=badweather;Username=postgres;Password=secret;Timeout=30;Command Timeout=0;KeepAlive=60"
+    "ApplicationDbContext": "Host=localhost;Port=54322;Database=badweather;Username=postgres;Password=secret;Timeout=30;Command Timeout=0;KeepAlive=60",
+    "Redis": "localhost:63799"
   }
 }
