refactor: rename Metars project to Metars.Api

--- a/Metars.Tests/Metars.Tests.csproj
+++ b/Metars.Tests/Metars.Tests.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Metars\Metars.csproj" />
+      <ProjectReference Include="..\Metars.Api\Metars.Api.csproj" />
     </ItemGroup>
 
     <ItemGroup>
