--- a/Metars.Api/Properties/launchSettings.json
+++ b/Metars.Api/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "BadWeather": {
+    "Metars.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
